sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: not found: value i
    while(n!=i-1 || t==0 ){
             ^AlgInsertionSort:9: error: not found: value t
    while(n!=i-1 || t==0 ){
                    ^AlgInsertionSort:10: error: not found: value i
          if (plusPetitQue(i-n,v)){
                           ^AlgInsertionSort:10: error: not found: value v
          if (plusPetitQue(i-n,v)){
                               ^AlgInsertionSort:11: error: not found: value t
              t=1
              ^AlgInsertionSort:12: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
              setValeur(i-n)
                       ^AlgInsertionSort:13: error: not found: value t
            t=1}
            ^